ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: movie-management-ingress
  namespace: movie-management
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: movie-management-service
            port:
              number: 80
